@startuml
hide circle

class User {
    **id : int <<PK>>**
    --
    username : str
    email : str
    password_hash : str
    created_date : datetime 
    profile_pic_url : str
    location_id : int <<FK>>
}


class Location {
    **id : int <<PK>>**
    --
    city : str
    area : str
    country : str
}

class Pet {
    **id : int <<PK>>**
    --
    owner_id : int <<FK>>
    name : str 
    birthday : datetime
    breed : str
}

class Post {
    **id : int <<PK>>**
    --
    user_id : int <<FK>>
    picture_url : str
    content : str
    created_date : datetime 
    last_updated : datetime
}

class Like {
    **user_id : int <<PK, FK>>**
    **post_id : int <<PK, FK>>**
}

class Comment {
    **id : int <<PK>>**
    --
    post_id : int <<FK>>
    user_id : int <<FK>>
    content : str
    created_date : datetime 
    last_updated : datetime
}
 
' Define relationships between tables

User "1" -- "1" Location: has >
User "1" -- "0..*" Pet: owns >
User "1" -- "0..*" Post: creates >
Post "1" -- "0..*" Like: recieves >
User "1" -- "0..*" Like: gives >
Post "1" -- "0..*" Comment: has >
User "1" -- "0..*" Comment: places >

@enduml
